# smoke

./: .dockerignore  .envrc  .gitignore  .rubocop.yml  .travis.yml  Dockerfile  Gemfile  LICENSE  Makefile  README.md  RELEASE.md  Rakefile  app.nix  appveyor.yml  bless-tests  cabal.project.freeze  default.nix  docker.nix  flake.nix  ghc.nix  lint.sh  nixpkgs.nix  package.yaml  run-tests  shell.nix  smoke.cabal  smoke.nix  smoke.rb  stack.config.macos.yaml  stack.yaml
.github/workflows/: release.yaml  verify.yaml
app/: Main.hs  Options.hs
app/Test/Smoke/App/: Diff.hs  Main.hs  OptionColorOutput.hs  OptionTypes.hs  Options.hs  Print.hs  PrintErrors.hs  PrintResults.hs  PrintSummary.hs  PrintTitle.hs  Printable.hs
app/Test/Smoke/App/Diff/: DiffUtility.hs  ExternalDiffCommand.hs  GitDiff.hs  Native.hs  Types.hs
app/unix/: Shell.hs
app/unix/Test/Smoke/App/: Shell.hs
app/windows/: Shell.hs
app/windows/Test/Smoke/App/: Shell.hs
fixtures/: bottles.rb  calculator.rb  encrypter.rb  environment.rb  exit-with  exit_with.rb  hexify.rb  non-executable-application.rb  non_executable_application  non_executable_application.rb  pick.rb
fixtures/bottles/: 10.out  100.out  1000-broken.args  1000-broken.out  command  smoke.yaml
fixtures/broken-specs/: smoke.yaml
fixtures/calculator/: command  complex.args  complex.out  division.in  infix-words-error.args  infix-words-error.err  infix-words-error.err-integer  multiple-digits.in  multiplication.in  parens.in  smoke.yaml  subtraction.args  three-numbers.in
fixtures/encrypter/: color.out  command  lines.out  regex.yaml  smoke.yaml  word.out
fixtures/encrypter/io/: color.in
fixtures/environment/: smoke.yaml
fixtures/exit/: smoke.yaml
fixtures/faulty-applications/: no-such-application.command  non-executable-application.command  smoke.yaml
fixtures/files/: hello  input.file  smoke.yaml
fixtures/files/expected/: lowercase.output.file
fixtures/hexify/: command  multiple-lines.in  multiple-lines.out  sentence.out  single-character.out  smoke.yaml  word.out
fixtures/malformed-specs/: invalid-yaml.yaml  test-as-dict.yaml  unknown-matcher.yaml  wrong-type.yaml
fixtures/pick/: args.args  bad.yaml  command  good.yaml  smoke.yaml  wrong.args
fixtures/processing-filters/: shout.rb  shout.sh  smoke.yaml
fixtures/shell/: echo-something.sh  global.yaml  local.yaml  smoke.yaml
fixtures/stderr/: smoke.yaml
fixtures/unicode/: smoke.yaml  zalgo.in  zalgo.out
fixtures/unicode/io/: chinese.in  chinese.out
fixtures/working-directory/: echo.rb  global.yaml  local.yaml
nix/: ci.nix  deps.nix  ghc.nix  haskell.nix  libs.nix  nixpkgs.nix  nixpkgs.version  smoke.nix  sources.json  stack.nix
nix/npins/: sources.json
spec/: bless.yaml  environment.yaml  help.yaml  malformed-specs.yaml  missing-tests.yaml  selection.yaml  shell.yaml  version.yaml
spec/io/: bottles-bless-failure.out  broken-specs-bless-failure.out-unix  broken-specs-bless-failure.out-windows  broken-specs.out-unix  broken-specs.out-windows  calculator-bless-failure.out  calculator-color.out  calculator-diff.out  calculator.out  encrypter-regex-bless-failure.out  encrypter.out  environment.out  files-bless-failure.out  files.out  help.out-unix  help.out-windows  long-output.out  nothing.err-unix  nothing.err-windows  pick.out1  pick.out2  pick.out3  pick.out4  pick.out5  processing-filters.out  shell.out-unix  shell.out-windows  statuses.out  stderr.out  unicode.out
src/Test/: Smoke.hs
src/Test/Smoke/: Bless.hs  Compare.hs  Discovery.hs  Errors.hs  Executable.hs  Execution.hs  FileTypes.hs  Files.hs  Filters.hs  Fixtures.hs  Lines.hs  Maps.hs  Paths.hs  Plan.hs  Runner.hs  Shell.hs  Summary.hs  Types.hs
src/Test/Smoke/Types/: Args.hs  Base.hs  Errors.hs  Executable.hs  Execution.hs  Files.hs  Filters.hs  Fixtures.hs  Paths.hs  Plans.hs  Results.hs  Run.hs  Shell.hs  Summary.hs  Tests.hs
src/app/Test/Smoke/App/: Diff.hs  Main.hs  OptionTypes.hs  Options.hs  Print.hs  PrintErrors.hs  PrintResults.hs  PrintSummary.hs  PrintTitle.hs
src/lib/Test/: Smoke.hs
src/lib/Test/Smoke/: Assert.hs  Bless.hs  Discovery.hs  Errors.hs  Executable.hs  Execution.hs  Filters.hs  Maps.hs  Parse.hs  Paths.hs  Plan.hs  Summary.hs  Types.hs
src/lib/Test/Smoke/Types/: Assert.hs  Base.hs  Errors.hs  Executable.hs  ExecutionResult.hs  Files.hs  Filters.hs  Fixtures.hs  Pattern.hs  Plans.hs  Results.hs  Run.hs  Summary.hs  Tests.hs  Values.hs
src/lib/unix/Test/Smoke/: Shell.hs
src/lib/windows/Test/Smoke/: Shell.hs
src/test/Test/Smoke/Spec/: PathGenerator.hs  PathsSpec.hs
src/unix/Test/Smoke/: Shell.hs
test/: broken-specs.yaml  calculator-color.args  calculator-color.command  calculator-color.out  calculator-diff-git.args  calculator-diff-git.out  calculator-diff-native.args  calculator-diff-native.out  calculator-diff-utility.args  calculator.args  calculator.in  calculator.out  calculator.yaml  color.yaml  command  commands.yaml  diff.yaml  encrypter.args  encrypter.out  faulty-applications.args  faulty-applications.out  faulty-applications.out-unix  faulty-applications.out-windows  faulty-applications.yaml  files.yaml  help.out  help.out-unix  help.out-windows  help.yaml  hexify.args  hexify.in  hexify.out  long-output.args  long-output.out  malformed-specs.yaml  missing-tests.yaml  multiple-outputs.yaml  no-such-application.args  no-such-application.err  non-executable-application.args  (+22 more)
test/Test/Smoke/: HelloSpec.hs  PathsSpec.hs
test/Test/Smoke/Spec/: PathGenerator.hs  PathsSpec.hs
test/io/: broken-specs.out  broken-specs.out-unix  broken-specs.out-windows  calculator-color.out  calculator-diff.out  calculator.out  encrypter-bless-success.out  encrypter.out  faulty-applications.out  faulty-applications.out-unix  faulty-applications.out-windows  files.out  help.out-unix  hexify.out  long-output.out  malformed-specs.out  nothing.err-unix  nothing.err-windows  pick.out1  pick.out2  pick.out3  pick.out4  pick.out5  processing-filters.out  shell.out  shell.out-unix  shell.out-windows  stderr.out  unicode.out  working-directory.out
(+11 files in other folders)
