name:                smoke
version:             2.0.0-alpha
synopsis:            An integration test framework for console applications.
description:         Please see README.md
homepage:            https://github.com/SamirTalwar/smoke#readme
license:             MIT
license-file:        LICENSE
author:              Samir Talwar
maintainer:          samir@noodlesandwich.com
copyright:           Samir Talwar
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/SamirTalwar/smoke

library
  hs-source-dirs:      src
  exposed-modules:     Test.Smoke Test.Smoke.FileTypes
  default-language:    Haskell2010
  build-depends:       base >= 4.9.1 && < 5
                     , directory
                     , filepath
                     , Glob
  ghc-options:         -Wall -Werror

executable smoke-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
  default-language:    Haskell2010
  build-depends:       base
                     , smoke
                     , optparse-applicative
                     , unix
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
